# tts-player-queue-service

./: .clang-tidy  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  Dockerfile  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  deployment-contract.json  docker-compose.yml  release_config.json  repo_config.json  run_tests.sh  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  deploy-k3s.yml  release-bundles.yml
docs/: INDEX.md  README.md
docs/api/: API.md  openapi.yaml
docs/guides/: DEPLOYMENT_GUARDRAILS.md  DEPLOYMENT_RELEASE_WORKFLOW.md  DEVELOPER.md  INFRASTRUCTURE.md  RELEASE_CHECKLIST.md
docs/technical/: ARCHITECTURE.md  DESIGN.md
include/: api_server.h  audio_player.h  config.h  rabbitmq_client.h  redis_cache.h
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  rabbitmq-statefulset.yaml  redis-statefulset.yaml  secret.yaml  service.yaml
scripts/: build_release_bundle.py  deploy-tts-playback-k3s.sh  validate_deployment_contract.py
src/: api_server.cpp  audio_player.cpp  main.cpp  rabbitmq_client.cpp  redis_cache.cpp
tests/: CMakeLists.txt  DIAGRAMS_INDEX.md  README.md  TEST_STRATEGY.md  UNIT_TESTING_GUIDE.md  test_api_server.cpp  test_audio_player.cpp  test_config.cpp  test_deployment_tools.py  test_integration.cpp  test_rabbitmq_client.cpp  test_redis_cache.cpp
tests/mocks/: mock_pulseaudio.cpp
